Remove __pycache__ files and improve .gitignore
- Removed all __pycache__ files from git tracking
- Enhanced .gitignore with comprehensive Python patterns
- Added IDE and OS file patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
-*/__pycache__
-backend/hireup.db
-*.db
-two-tower/resumes/
+# Python
+__pycache__/
+*/__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual environments
 venv/
 .venv/
+env/
+ENV/
+
+# Database
+backend/hireup.db
+*.db
+*.sqlite
+*.sqlite3
+
+# Resumes
+two-tower/resumes/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
