--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ ENV/
 # Database
 backend/hireup.db
 *.db
-*.sqlite
+# *.sqlite
 *.sqlite3
 
 # Resumes
@@ -38,3 +38,6 @@ two-tower/resumes/
 # OS
 .DS_Store
 Thumbs.db
+
+# Secrets
+.env
